--- a/bspwm/.config/polybar/config
+++ b/bspwm/.config/polybar/config
@@ -37,13 +37,12 @@ padding-right = 0
 module-margin-left = 1
 module-margin-right = 1
 font-0 = monospace:size=10
-font-1 = JoyPixels:scale=12
 font-2 = Font Awesome 5 Free:pixelsize=10;1
 font-3 = Font Awesome 5 Free Solid:pixelsize=10;1
 font-4 = Font Awesome 5 Brands:pixelsize=10;1
 modules-left = bspwm
 modules-center =
-modules-right = memory alsa date logout
+modules-right = memory alsa date
 tray-position = center
 tray-padding = 2
 cursor-click = pointer
@@ -89,11 +88,6 @@ interval=30m
 type=custom/script
 exec=echo " $(checkupdates | wc -l)"
 interval=30m
-
-[module/logout]
-type=custom/script
-exec=echo ""
-click-left = logout
 
 [module/date]
 type = internal/date
