--- a/bspwm/.config/polybar/config
+++ b/bspwm/.config/polybar/config
@@ -37,6 +37,7 @@ padding-right = 0
 module-margin-left = 1
 module-margin-right = 1
 font-0 = monospace:size=10
+font-1 = JoyPixels:scale=12
 font-2 = Font Awesome 5 Free:pixelsize=10;1
 font-3 = Font Awesome 5 Free Solid:pixelsize=10;1
 font-4 = Font Awesome 5 Brands:pixelsize=10;1
@@ -76,7 +77,7 @@ ws-icon-8 = "9;"
 
 [module/memory]
 type=custom/script
-exec=echo " $(free -h | awk '/Mem/ {print $3 "/" $2}')"
+exec=echo "🧠$(free -h | awk '/Mem/ {print $3 "/" $2}')"
 interval=1m
 
 [module/temperature]
